edit model of town

--- a/model_town.html
+++ b/model_town.html
@@ -233,8 +233,8 @@
         <span class="english">The demonstration via THREE.js library</span>
         <span class="french"></span></h3>
         
-        <p><span class="czech">Model obce se zobrazí po kliknutí </span><a class="various" data-fancybox-type="iframe" href="sight/complete_three.html"><span class="czech">zde.</span></a>
-        <span class="english">The model of the town will be displayed after cliking </span><a class="various" data-fancybox-type="iframe" href="sight/complete_three.html"><span class="english">here.</span></a>
+        <p><span class="czech">Model obce se zobrazí po kliknutí </span><a class="various" data-fancybox-type="iframe" href="sight/town.html"><span class="czech">zde.</span></a>
+        <span class="english">The model of the town will be displayed after cliking </span><a class="various" data-fancybox-type="iframe" href="sight/town.html"><span class="english">here.</span></a>
         <span class="french"></span></p>
         
         <p><span class="czech">Stažení modelu obce </span><a href="download/model_obce.zip"><span class="czech">zde.</span></a>
