--- a/sight/town.html
+++ b/sight/town.html
@@ -3,7 +3,7 @@
   <head>
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
   <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-  <title></title>
+  <title>Model of the town</title>
   <style>
          body {background-color: #f0f0f0; overflow:hidden}</style>
   </head>
