--- a/models.html
+++ b/models.html
@@ -7,22 +7,22 @@
     <link rel="alternate stylesheet" href="/css/english.css" title="english" media="screen"/>
     <link rel="alternate stylesheet" href="/css/french.css" title="french" media="screen"/>
     <link rel="stylesheet" href="/css/bootstrap.css"/>
-    <link rel="stylesheet" href="css/maps/style.css">
+    <link rel="stylesheet" href="http://ol3js.org/en/master/css/ol.css" type="text/css">
     <link rel="icon" href="/img/favicon.ico">
-
+<!--
     <style>
       .olPopup h3 {text-align: center; margin-bottom: 10px}
       .olPopup p {font-size: 1.2em; text-align: center; overflow: hidden}
       .olPopup a {text-decoration: none}
     </style>
+-->
 
     <script src="lib/styleswitch.js"></script>
-    <script src="lib/OpenLayers.js"></script>
-    <script src="lib/mapa.js"></script>
+    <script src="http://ol3js.org/en/master/build/ol.js" type="text/javascript"></script>
 
     <title>Přísečnice / Pressnitz</title>
   </head>
-  <body onload="init()">
+  <body>
     <nav>
       <div class="navbar navbar-default navbar-fixed-top" role="navigation">
         <div class="container">
@@ -109,6 +109,7 @@
 
     <div class="wrapper">
       <div class="container">
+        <div id="map" class="map"></div>
 
         <p><span class="czech"></span>
         <span class="english"></span>
@@ -155,5 +156,6 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="lib/bootstrap.min.js"></script>
+    <script src="lib/map.js"></script>
   </body>
 </html>
