new page 'models.html'

--- a/about.html
+++ b/about.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <link rel="stylesheet" href="style.css"/>
-    <link rel="alternate stylesheet" href="/css/english.css" title="english" media="screen"/>
-    <link rel="alternate stylesheet" href="/css/french.css" title="french" media="screen"/>
-    <link rel="stylesheet" href="/css/bootstrap.css"/>
-    <link rel="icon" href="/img/favicon.ico">
+    <link rel="stylesheet" href="css/style.css"/>
+    <link rel="alternate stylesheet" href="css/lang/english.css" title="english" media="screen"/>
+    <link rel="alternate stylesheet" href="css/lang/french.css" title="french" media="screen"/>
+    <link rel="stylesheet" href="css/bootstrap/bootstrap.css"/>
+    <link rel="icon" href="img/favicon.ico">
 
     <script src="lib/styleswitch.js"></script>
 
@@ -146,6 +146,6 @@
     </footer>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-    <script src="lib/bootstrap.min.js"></script>
+    <script src="lib/bootstrap/bootstrap.min.js"></script>
   </body>
 </html>
