--- a/location.html
+++ b/location.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <link rel="stylesheet" href="style.css"/>
-    <link rel="alternate stylesheet" href="/css/english.css" title="english" media="screen"/>
-    <link rel="alternate stylesheet" href="/css/french.css" title="french" media="screen"/>
-    <link rel="stylesheet" href="/css/bootstrap.css"/>
-    <link rel="icon" href="/img/favicon.ico">
+    <link rel="stylesheet" href="css/style.css"/>
+    <link rel="alternate stylesheet" href="css/lang/english.css" title="english" media="screen"/>
+    <link rel="alternate stylesheet" href="css/lang/french.css" title="french" media="screen"/>
+    <link rel="stylesheet" href="css/bootstrap/bootstrap.css"/>
+    <link rel="icon" href="img/favicon.ico">
 
     <script src="lib/styleswitch.js"></script>
 
@@ -107,7 +107,7 @@
         <table class="zajuz_tab">
           <tr>
             <td>
-              <img src="../img/zajmove_uzemi2.png" alt="poloha Přísečnice" title="Poloha Přísečnice v rámci Ústeckého kraje">
+              <img src="img/zajmove_uzemi2.png" alt="poloha Přísečnice" title="Poloha Přísečnice v rámci Ústeckého kraje">
             </td>
           </tr>
           <tr>
@@ -121,7 +121,7 @@
         <table class="zajuz_tab2">
           <tr>
             <td>
-              <img src="../img/zajmove_uzemi1.png" alt="poloha Přísečnice" title="Poloha Přísečnice v rámci přehrady">
+              <img src="img/zajmove_uzemi1.png" alt="poloha Přísečnice" title="Poloha Přísečnice v rámci přehrady">
             </td>
           </tr>
           <tr>
@@ -147,7 +147,7 @@
         <table>
           <tr>
             <td>
-              <img src="/img/prA5.png" alt="přehrada (2.5D)" title="Přehrada (2.5D)">
+              <img src="img/prA5.png" alt="přehrada (2.5D)" title="Přehrada (2.5D)">
             </td>
           </tr>
           <tr>
@@ -179,6 +179,6 @@
     </footer>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-    <script src="lib/bootstrap.min.js"></script>
+    <script src="lib/bootstrap/bootstrap.min.js"></script>
   </body>
 </html>
