--- a/model_town.html
+++ b/model_town.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <link rel="stylesheet" href="style.css"/>
-    <link rel="alternate stylesheet" href="css/english.css" title="english" media="screen"/>
-    <link rel="alternate stylesheet" href="css/french.css" title="french" media="screen"/>
-    <link rel="stylesheet" href="css/bootstrap.css"/>
+    <link rel="stylesheet" href="css/style.css"/>
+    <link rel="alternate stylesheet" href="css/lang/english.css" title="english" media="screen"/>
+    <link rel="alternate stylesheet" href="css/lang/french.css" title="french" media="screen"/>
+    <link rel="stylesheet" href="css/bootstrap/bootstrap.css"/>
     <link rel="stylesheet" href="css/jquery.fancybox.css" media="screen">
     <link rel="icon" href="img/favicon.ico"/>
 
@@ -265,7 +265,7 @@
     </footer>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <script src="lib/bootstrap.min.js"></script>
+    <script src="lib/bootstrap/bootstrap.min.js"></script>
     <script src="lib/jquery.fancybox.js"></script>
     <script>
       $(document).ready(function(){
@@ -281,10 +281,10 @@
           }
         });
         $(".various").fancybox({
-          maxWidth: 720,
+          maxWidth: 800,
           fitToView: false,
-          width: "70%",
-          height: "70%",
+//          width: "70%",
+//          height: "70%",
           autoSize: false,
           closeClick: false,
           openEffect: "none",
