--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <link rel="stylesheet" href="style.css"/>
-    <link rel="alternate stylesheet" href="/css/english.css" title="english" media="screen"/>
-    <link rel="alternate stylesheet" href="/css/french.css" title="french" media="screen"/>
-    <link rel="stylesheet" href="/css/bootstrap.css"/>
-    <link rel="icon" href="/img/favicon.ico">
+    <link rel="stylesheet" href="css/style.css"/>
+    <link rel="alternate stylesheet" href="css/lang/english.css" title="english" media="screen"/>
+    <link rel="alternate stylesheet" href="css/lang/french.css" title="french" media="screen"/>
+    <link rel="stylesheet" href="css/bootstrap/bootstrap.css"/>
+    <link rel="icon" href="img/favicon.ico">
 
     <script src="lib/styleswitch.js"></script>
 
@@ -104,12 +104,12 @@
           <h1 class="title"><b>Rekonstrukce zaniklé obce Přísečnice</b></h1>
         </header>
         <p class="front">
-          <img src="/img/line_up.png" alt=""/>
+          <img src="img/line_up.png" alt=""/>
           <br>
           <b>Stránky o znovuzrození městečka ze severu Čech</b>
           <br>
-          <img src="/img/line_down.png" alt=""/>
-          <img src="/img/front6.png" alt="front"/>
+          <img src="img/line_down.png" alt=""/>
+          <img src="img/front6.png" alt="front"/>
         </p>
 
         <h2 style="text-align:center;"><span class="czech">Úvod</span>
@@ -193,6 +193,6 @@
         </ul>
 -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-    <script src="lib/bootstrap.min.js"></script>
+    <script src="lib/bootstrap/bootstrap.min.js"></script>
   </body>
 </html>
