--- a/landUse.html
+++ b/landUse.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <link rel="stylesheet" href="style.css"/>
-    <link rel="alternate stylesheet" href="/css/english.css" title="english" media="screen"/>
-    <link rel="alternate stylesheet" href="/css/french.css" title="french" media="screen"/>
-    <link rel="stylesheet" href="/css/bootstrap.css"/>
-    <link rel="icon" href="/img/favicon.ico">
+    <link rel="stylesheet" href="css/style.css"/>
+    <link rel="alternate stylesheet" href="css/lang/english.css" title="english" media="screen"/>
+    <link rel="alternate stylesheet" href="css/lang/french.css" title="french" media="screen"/>
+    <link rel="stylesheet" href="css/bootstrap/bootstrap.css"/>
+    <link rel="icon" href="img/favicon.ico">
 
     <script src="lib/styleswitch.js"></script>
 
@@ -178,13 +178,13 @@
           <table class="gal">
             <tr>
               <td>
-                <a class="thumbnail" href="/img/prD1.png"><img class="img-responsive" src="/img/prD1min.png" alt=" "></a>
+                <a class="thumbnail" target="_blank" href="img/prD1.png"><img class="img-responsive" src="img/prD1min.png" alt=" "></a>
               </td>
               <td>
-                <a class="thumbnail" href="/img/prD2.png"><img class="img-responsive" src="/img/prD2min.png" alt=" "></a>
+                <a class="thumbnail" target="_blank" href="img/prD2.png"><img class="img-responsive" src="img/prD2min.png" alt=" "></a>
               </td>
               <td>
-                <a class="thumbnail" href="/img/prD3.png"><img class="img-responsive" src="/img/prD3min.png" alt=" "></a>
+                <a class="thumbnail" target="_blank" href="img/prD3.png"><img class="img-responsive" src="img/prD3min.png" alt=" "></a>
               </td>
             </tr>
           </table>
@@ -233,6 +233,6 @@
     </footer>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-    <script src="lib/bootstrap.min.js"></script>
+    <script src="lib/bootstrap/bootstrap.min.js"></script>
   </body>
 </html>
