--- a/models.html
+++ b/models.html
@@ -3,22 +3,17 @@
   <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <link rel="stylesheet" href="style.css"/>
-    <link rel="alternate stylesheet" href="/css/english.css" title="english" media="screen"/>
-    <link rel="alternate stylesheet" href="/css/french.css" title="french" media="screen"/>
-    <link rel="stylesheet" href="/css/bootstrap.css"/>
-    <link rel="stylesheet" href="http://ol3js.org/en/master/css/ol.css" type="text/css">
-    <link rel="icon" href="/img/favicon.ico">
-<!--
-    <style>
-      .olPopup h3 {text-align: center; margin-bottom: 10px}
-      .olPopup p {font-size: 1.2em; text-align: center; overflow: hidden}
-      .olPopup a {text-decoration: none}
-    </style>
--->
+    <link rel="stylesheet" href="css/style.css"/>
+    <link rel="alternate stylesheet" href="css/lang/english.css" title="english" media="screen"/>
+    <link rel="alternate stylesheet" href="css/lang/french.css" title="french" media="screen"/>
+    <link rel="stylesheet" href="css/bootstrap/bootstrap.css"/>
+<!--    <link rel="stylesheet" href="http://ol3js.org/en/master/css/ol.css" type="text/css">-->
+    <link rel="stylesheet" href="css/jquery.fancybox.css" media="screen">
+    <link rel="stylesheet" href="css/openLayers/style.css">
+    <link rel="icon" href="img/favicon.ico">
 
     <script src="lib/styleswitch.js"></script>
-    <script src="http://ol3js.org/en/master/build/ol.js" type="text/javascript"></script>
+<!--    <script src="http://ol3js.org/en/master/build/ol.js" type="text/javascript"></script>-->
 
     <title>Přísečnice / Pressnitz</title>
   </head>
@@ -109,33 +104,37 @@
 
     <div class="wrapper">
       <div class="container">
+        <h2><span class="czech">Modely budov</span>
+        <span class="english">Models</span>
+        <span class="french">Des modèles de bâtiments</span></h2>
+
         <div id="map" class="map"></div>
+        <form id="formular">
+          <span class="czech">č. p.:</span>
+          <span class="english">N&deg;</span>
+          <span class="french">N&deg;</span>
 
-        <p><span class="czech"></span>
-        <span class="english"></span>
-        <span class="french"></span></p>
+          <select id="coo" name="coo" class="vyber">
+            <option selected="selected" value="br" id="0">-------</option>
+          </select>
 
-        <p><span class="czech"></span>
-        <span class="english"></span>
-        <span class="french"></span></p>
+          <button class="but" type="button">
+          <span class="czech">Vyčistit</span>
+          <span class="english">Clear</span>
+          <span class="french">Nette</span></button>
 
-        <p><span class="czech"></span>
-        <span class="english"></span>
-        <span class="french"></span></p>
-
-        <p><span class="czech"></span>
-        <span class="english"></span>
-        <span class="french"></span></p>
-
-        <p><span class="czech"></span>
-        <span class="english"></span>
-        <span class="french"></span></p>
-
-        <p><span class="czech"></span>
-        <span class="english"></span>
-        <span class="french"></span></p>
+          <button id="but2" class="but2" type="button">
+          <span class="czech">Skrýt mapu</span>
+          <span class="english">Hide the map</span>
+          <span class="french"></span></button>
+        </form>
+        </div>
       </div>
+    <div class="container">
+      <div id="obsah-popis"></div>
+      <div id="obsah-model"></div>
     </div>
+
 
     <footer class="navbar-fixed-bottom">
       <div class="container paticka">
@@ -155,7 +154,37 @@
     </footer>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-    <script src="lib/bootstrap.min.js"></script>
-    <script src="lib/map.js"></script>
+    <script src="lib/bootstrap/bootstrap.min.js"></script>
+    <script src="lib/listOfhaus.js"></script>
+    <script src="lib/OpenLayers.js"></script>
+    <script src="lib/models.js"></script>
+    <script src="lib/jquery.fancybox.js"></script>
+    <script>
+      $(document).ready(function(){
+    //FANCYBOX
+    //https://github.com/fancyapps/fancyBox
+//        $(".fancybox-button").fancybox({
+//          prevEffect: "none",
+//          nextEffect: "none",
+//          helpers: {
+//            title: {type: "inside"},
+//            buttons: {},
+//            thumbs: {width:50, height: 50}
+//          }
+//        });
+        $(".various").fancybox({
+          maxWidth: 720,
+          maxHeight: 700,
+          fitToView: true,
+          width: "70%",
+          height: "70%",
+          autoSize: false,
+          closeClick: false,
+          openEffect: "none",
+          closeEffect: "none"
+        })
+      });
+    </script>
+
   </body>
 </html>
