--- a/reconstruction.html
+++ b/reconstruction.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <link rel="stylesheet" href="style.css"/>
-    <link rel="alternate stylesheet" href="/css/english.css" title="english" media="screen"/>
-    <link rel="alternate stylesheet" href="/css/french.css" title="french" media="screen"/>
-    <link rel="stylesheet" href="/css/bootstrap.css"/>
-    <link rel="icon" href="/img/favicon.ico">
+    <link rel="stylesheet" href="css/style.css"/>
+    <link rel="alternate stylesheet" href="css/lang/english.css" title="english" media="screen"/>
+    <link rel="alternate stylesheet" href="css/lang/french.css" title="french" media="screen"/>
+    <link rel="stylesheet" href="css/bootstrap/bootstrap.css"/>
+    <link rel="icon" href="img/favicon.ico">
 
     <script src="lib/styleswitch.js"></script>
 
@@ -142,7 +142,7 @@
         <table class="sketch">
           <tr>
             <td>
-              <img src="/img/sketch.png" alt="přehrada (2.5D)" title="Přehrada (2.5D)">
+              <img src="img/sketch.png" alt="přehrada (2.5D)" title="Přehrada (2.5D)">
             </td>
           </tr>
           <tr>
@@ -229,6 +229,6 @@
     </footer>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-    <script src="lib/bootstrap.min.js"></script>
+    <script src="lib/bootstrap/bootstrap.min.js"></script>
   </body>
 </html>
