--- a/sight/04.html
+++ b/sight/04.html
@@ -4,8 +4,8 @@
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
   <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
   <title></title>
-  <style>
-         body {background-color: #f0f0f0; overflow:hidden}</style>
+  <style>body {overflow: hidden}
+         canvas { width: 100%; height: 450px; background-color: #f0f0f0; margin: 0 auto }</style>
   </head>
   <body>
 		<script src="../lib/three/three.min.js"></script>
