--- a/sight/town.html
+++ b/sight/town.html
@@ -5,7 +5,8 @@
   <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
   <title>Model of the town</title>
   <style>
-         body {background-color: #f0f0f0; overflow:hidden}</style>
+         body {overflow: hidden}
+         canvas { width: 100%; background-color: #f0f0f0; margin: 0 auto }</style>
   </head>
   <body>
 		<script src="../lib/three/three.min.js"></script>
