--- a/models.html
+++ b/models.html
@@ -7,13 +7,12 @@
     <link rel="alternate stylesheet" href="css/lang/english.css" title="english" media="screen"/>
     <link rel="alternate stylesheet" href="css/lang/french.css" title="french" media="screen"/>
     <link rel="stylesheet" href="css/bootstrap/bootstrap.css"/>
-<!--    <link rel="stylesheet" href="http://ol3js.org/en/master/css/ol.css" type="text/css">-->
+    <link rel="stylesheet" href="http://ol3js.org/en/master/css/ol.css" type="text/css">
     <link rel="stylesheet" href="css/jquery.fancybox.css" media="screen">
-    <link rel="stylesheet" href="css/openLayers/style.css">
+<!--    <link rel="stylesheet" href="css/openLayers/style.css">-->
     <link rel="icon" href="img/favicon.ico">
 
     <script src="lib/styleswitch.js"></script>
-<!--    <script src="http://ol3js.org/en/master/build/ol.js" type="text/javascript"></script>-->
 
     <title>Přísečnice / Pressnitz</title>
   </head>
@@ -108,7 +107,6 @@
         <span class="english">Models</span>
         <span class="french">Des modèles de bâtiments</span></h2>
 
-        <div id="map" class="map"></div>
         <form id="formular">
           <span class="czech">č. p.:</span>
           <span class="english">N&deg;</span>
@@ -118,21 +116,32 @@
             <option selected="selected" value="br" id="0">-------</option>
           </select>
 
-          <button class="but" type="button">
+          <button id="but" class="but" type="button">
           <span class="czech">Vyčistit</span>
           <span class="english">Clear</span>
           <span class="french">Nette</span></button>
 
-          <button id="but2" class="but2" type="button">
+          <button id="but2" class="but" type="button" disabled="false">
           <span class="czech">Skrýt mapu</span>
           <span class="english">Hide the map</span>
           <span class="french"></span></button>
+
         </form>
+
+
+        <div class="mapsec">
+          <div id="map" class="map"></div>
+          <input id="swipe" type="range" style="width: 100%">
+        </div>
+
+        <div id="obsah-model" class="modelsec">
+          <iframe class="frame" src="sight/start.html"></iframe>
         </div>
       </div>
+    </div>
     <div class="container">
       <div id="obsah-popis"></div>
-      <div id="obsah-model"></div>
+      <div id="photo"></div>
     </div>
 
 
@@ -155,8 +164,9 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="lib/bootstrap/bootstrap.min.js"></script>
+<!--    <script src="lib/OpenLayers.js"></script>    -->
+    <script src="http://ol3js.org/en/master/build/ol.js"></script>
     <script src="lib/listOfhaus.js"></script>
-    <script src="lib/OpenLayers.js"></script>
     <script src="lib/models.js"></script>
     <script src="lib/jquery.fancybox.js"></script>
     <script>
@@ -172,12 +182,16 @@
 //            thumbs: {width:50, height: 50}
 //          }
 //        });
+        $(".fancybox")
+          .fancybox({
+            padding: 10
+          });
         $(".various").fancybox({
           maxWidth: 720,
-          maxHeight: 700,
+          maxHeight: 600,
           fitToView: true,
-          width: "70%",
-          height: "70%",
+//          width: "70%",
+//          height: "70%",
           autoSize: false,
           closeClick: false,
           openEffect: "none",
