edit a page models.html

--- a/models.html
+++ b/models.html
@@ -121,7 +121,7 @@
           <span class="english">Clear</span>
           <span class="french">Nette</span></button>
 
-          <button id="but2" class="but" type="button" disabled="false">
+          <button id="but2" class="but" type="button" disabled>
           <span class="czech">Skrýt mapu</span>
           <span class="english">Hide the map</span>
           <span class="french"></span></button>
