--- a/about.html
+++ b/about.html
@@ -100,9 +100,30 @@
 
     <div class="wrapper">
       <div class="container">
+        <div id="switchform">
+          <ul>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+              <span class="czech">Jazyk</span>
+              <span class="english">Language</span>
+              <span class="french">Langue</span> <b class="caret"></b></a>
+                <ul class="dropdown-menu">
+                 <li><a href="javascript:chooseStyle('none', 60)">Česky</a></li>
+                 <li><a href="javascript:chooseStyle('english', 60)">English</a></li>
+<!--                 <li><a href="javascript:chooseStyle('french', 60)">Fran&ccedil;ais</a></li>-->
+               </ul>
+             </li>
+           </ul>
+         </div>
+       </div>
+      <div class="container">
         <h2><span class="czech">O Projektu</span>
         <span class="english">About</span>
         <span class="french"></span></h2>
+
+        <div class="ja">
+           <img src="img/ja.png" alt="">
+        </div>
 
         <p><span class="czech">Tyto webové stránky vznikly původně jako prezentace mé diplomové práce psané na téma <i>Rekonstrukce a vývoj krajiny v&nbsp;oblasti přehrady Přísečnice</i>.</span>
         <span class="english"></span>
