--- a/index.html
+++ b/index.html
@@ -100,13 +100,46 @@
 
     <div class="wrapper">
       <div class="container">
+        <div id="switchform">
+          <ul>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+              <span class="czech">Jazyk</span>
+              <span class="english">Language</span>
+              <span class="french">Langue</span> <b class="caret"></b></a>
+                <ul class="dropdown-menu">
+                 <li><a href="javascript:chooseStyle('none', 60)">Česky</a></li>
+                 <li><a href="javascript:chooseStyle('english', 60)">English</a></li>
+<!--                 <li><a href="javascript:chooseStyle('french', 60)">Fran&ccedil;ais</a></li>-->
+               </ul>
+             </li>
+           </ul>
+         </div>
+       </div>
+      <div class="container">
         <header>
-          <h1 class="title"><b>Rekonstrukce zaniklé obce Přísečnice</b></h1>
+          <h1 class="title"><b>
+          <span class="czech">Rekonstrukce zaniklé obce Přísečnice</span>
+          <span class="english">The reconstruction of the vanished town of Pressnitz</span>
+          <span class="french"></span>
+          </b></h1>
         </header>
-        <p class="front">
+        <p class="front czech">
           <img src="img/line_up.png" alt=""/>
           <br>
-          <b>Stránky o znovuzrození městečka ze severu Čech</b>
+          <b>
+          Stránky o znovuzrození městečka ze severu Čech
+          </b>
+          <br>
+          <img src="img/line_down.png" alt=""/>
+          <img src="img/front6.png" alt="front"/>
+        </p>
+        <p class="front english">
+          <img src="img/line_up.png" alt=""/>
+          <br>
+          <b>
+          Pages about the rebirth of a town in the Northern Bohemia
+          </b>
           <br>
           <img src="img/line_down.png" alt=""/>
           <img src="img/front6.png" alt="front"/>
@@ -131,20 +164,16 @@
         </aside>
 
         <p><span class="czech">Vítejte na webových stránkách věnovaných rekonstrukci zaniklé obce Přísečnice, vytvořených v rámci projektu Ministerstva kultury <i>Rekonstrukce krajiny a databáze zaniklých obcí v&nbsp;Ústeckém kraji pro zachování kulturního dědictví</i> (NAKI&nbsp;DF12P01OVV043).</span>
-        <span class="english">Welcome to the website devoted to the reconstruction of the former town Přísečnice developed within the project of the Ministry of Culture Czech republic (NAKI&nbsp;DF12P01OVV043).</span>
+        <span class="english">Welcome to the website devoted to the reconstruction of the former town Pressnitz developed within the project of the Ministry of Culture Czech republic (NAKI&nbsp;DF12P01OVV043).</span>
         <span class="french">Bienvenue</span></p>
 
-        <p><span class="czech">Rekonstrukce obce spočívá v&nbsp;modelaci jednotlivých domů a terénu pod obcí. Tyto modely jsou pak doplněny informacemi o původní budově, pokud jsou takové informace známy. Zároveň vzniká model středu obce z&nbsp;roku 1972. Povídání o&nbsp;modelech a jednotlivé modely budov jsou k&nbsp;dispozici v&nbsp;záložkách <i>Rekonstrukce obce</i>, <i>Model středu obce</i> a <i>Modely budov</i>. Stránky jsou doplněny také povídáním o&nbsp;poloze a historii obce - záložka <i>O Obci</i>, která obsahuje záložky <i>Poloha</i>, <i>Historie</i>, <i>Urbanistický vývoj</i> a <i>Vývoj využití ploch</i> V poslední záložce je nastíněn vývoj využití ploch mezi roky 1842, 1953 a 2012. Je zde také možné si prohlédnout plány využití ploch pro jednotlivé roky. V záložce <i>O projektu</i> se nachází pár slov o těchto stránkách. Formulář pro zasílání námětů a poznámek naleznete v záložce <i>Kontakt</i>.</span>
-        <span class="english">Reconstruction of the town lies in the modeling of buildings and terrain of the town. These models are then supplemented with information on the original building, where such information is known. At the same time there is a model of the town center from 1972. Description of the models and the models of buildings are available in the tabs <i>Reconstruction of the town</i>, <i>Model of the town center</i> and <i>Models</i>. Pages are also extended description of the location and history of town - the tabs <i>Location</i>, <i>History</i> and <i>Urban development</i>. Development of Land use between the years 1842, 1953 and 2012 is in the tab <i>Land use</i>. It is also possible to see land use plans for each year. Information about this pages and project is in the tab <i>About</i>. Form for sending topics and notes is in the tab <i>Contact</i>.</span>
-        <span class="french"></span></p>
-
-        <p><span class="czech"><i>Stránky jsou vyvíjeny v operačním systému Windows 7 v prohlížeči Google Chrome. Omlouvám se všem, kterým tyto stránky správně nefungují pokud použijí jiný systém či prohlížeč.</i></span>
-        <span class="english"><i>Website is developed in the operating system Windows 7 and in the browser Google Chrome. I apologize to all to whom these pages do not work correctly when they will use another system or browser.</i></span>
+        <p><span class="czech">Rekonstrukce obce spočívá v&nbsp;modelaci jednotlivých domů a terénu pod obcí. Tyto modely jsou pak doplněny informacemi o původní budově, pokud jsou takové informace známy. Zároveň vzniká model středu obce z&nbsp;roku 1972. Povídání o&nbsp;modelech a jednotlivé modely budov jsou k&nbsp;dispozici v&nbsp;záložce <i>Rekonstrukce obce</i>. Stránky jsou doplněny povídáním o&nbsp;poloze a historii obce - záložka <i>O Obci</i>. V záložce <i>O projektu</i> se nachází pár slov o těchto stránkách. Formulář pro zasílání námětů a poznámek naleznete v záložce <i>Kontakt</i>.</span>
+        <span class="english">Reconstruction of the town lies in the modeling of buildings and terrain of the town. These models are then supplemented with information on the original building, where such information is known. At the same time there is a model of the town center from 1972. Description of the models and the models of buildings are available in the tab <i>Reconstruction of the town</i>. Pages are also extended description of the location and history of town - the tab <i>Town</i>. Information about this pages and project is in the tab <i>About</i>. Form for sending topics and notes is in the tab <i>Contact</i>.</span>
         <span class="french"></span></p>
 
         <div class="bg-warning aktual">
           <h2><span class="czech">Prosba ke všem pamětníkům a přátelům Přísečnice</span>
-          <span class="english">Request to all old resident and friends of Přísečnice</span>
+          <span class="english">Request to all old resident and friends of Pressnitz</span>
           <span class="french"></span></h2>
 
           <p><span class="czech">Chtěla bych Vás požádat o zapůjčení fotografií a pohlednic zachycující exteriéry a interiéry jednotlivých budov (které však nejsou vystaveny na stránkách Zaniklé obce), dále pak různé mapy a plánky, které by doplnily bílá místa a rozšířily oblast zájmu.</span>
@@ -152,7 +181,7 @@
           <span class="french"></span></p>
 
           <p><span class="czech">Zájem mám také o místní pověsti, pohádky, pověry, texty písní, životní příběhy, vše, co by pomohlo dokreslit život v Přísečnici. Po získání dostatečného množství materiálu bude vytvořena zvláštní záložka o životě místních lidí.</span>
-          <span class="english">I am also interested in local tales and legends, superstitions, lyrics, life stories, everything that would help describe life in Přísečnice.</span>
+          <span class="english">I am also interested in local tales and legends, superstitions, lyrics, life stories, everything that would help describe life in Pressnitz.</span>
           <span class="french"></span></p>
 
           <p><span class="czech">V případě zájmu o spolupráci mě kontaktujte přes formulář v záložce <i>Kontakt</i></span>
@@ -177,21 +206,6 @@
 
       </div>
     </footer>
-<!--
-        <ul>
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-            <span class="czech">Jazyk</span>
-            <span class="english">Language</span>
-            <span class="french">Langue</span> <b class="caret"></b></a>
-            <ul class="dropdown-menu">
-             <li><a href="javascript:chooseStyle('none', 60)">Česky</a></li>
-             <li><a href="javascript:chooseStyle('english', 60)">English</a></li>
-             <li><a href="javascript:chooseStyle('french', 60)">Fran&ccedil;ais</a></li>
-            </ul>
-          </li>
-        </ul>
--->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="lib/bootstrap/bootstrap.min.js"></script>
   </body>
