--- a/location.html
+++ b/location.html
@@ -99,6 +99,23 @@
     </nav>
 
     <div class="wrapper">
+     <div class="container">
+        <div id="switchform">
+          <ul>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+              <span class="czech">Jazyk</span>
+              <span class="english">Language</span>
+              <span class="french">Langue</span> <b class="caret"></b></a>
+                <ul class="dropdown-menu">
+                 <li><a href="javascript:chooseStyle('none', 60)">Česky</a></li>
+                 <li><a href="javascript:chooseStyle('english', 60)">English</a></li>
+<!--                 <li><a href="javascript:chooseStyle('french', 60)">Fran&ccedil;ais</a></li>-->
+               </ul>
+             </li>
+           </ul>
+         </div>
+       </div>
       <div class="container">
         <h2><span class="czech">Poloha obce</span>
         <span class="english">Location of the town</span>
