--- a/models.html
+++ b/models.html
@@ -103,6 +103,23 @@
     </nav>
 
     <div class="wrapper">
+     <div class="container">
+        <div id="switchform">
+          <ul>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+              <span class="czech">Jazyk</span>
+              <span class="english">Language</span>
+              <span class="french">Langue</span> <b class="caret"></b></a>
+                <ul class="dropdown-menu">
+                 <li><a href="javascript:chooseStyle('none', 60)">Česky</a></li>
+                 <li><a href="javascript:chooseStyle('english', 60)">English</a></li>
+<!--                 <li><a href="javascript:chooseStyle('french', 60)">Fran&ccedil;ais</a></li>-->
+               </ul>
+             </li>
+           </ul>
+         </div>
+       </div>
       <div class="container">
         <h2><span class="czech">Modely budov</span>
         <span class="english">Models</span>
@@ -130,7 +147,7 @@
           </label>
 
           <label class="checkbox-inline checkDes">
-           <input id="checkDes" type="checkbox" value="option2" disabled>
+           <input id="checkDes" type="checkbox" value="option2" disabled checked>
            <span class="czech hideDesCZ">Popis</span>
            <span class="english hideDesEN">Description</span>
            <span class="french hideDesFR"></span>
