--- a/sight/start.html
+++ b/sight/start.html
@@ -7,7 +7,7 @@
   <style>body {overflow: hidden}
          div { width: 100%;
                height: 453px;
-               background-image: url(../img/start.png);
+               background-image: url(../img/co2.png);
                margin: 0 auto }</style>
   </head>
   <body>
