add language switcher

--- a/about.html
+++ b/about.html
@@ -37,6 +37,12 @@
                 <span class="english">Town</span>
                 <span class="french">Le village</span> <b class="caret"></b></a>
                 <ul class="dropdown-menu">
+                  <li><a href="loc_his.html">
+                  <span class="czech">O Obci</span>
+                  <span class="english">The town</span>
+                  <span class="french">Le village</span>
+                  </a></li>
+<!--
                   <li><a href="location.html">
                   <span class="czech">Poloha</span>
                   <span class="english">Location</span>
@@ -52,6 +58,7 @@
                   <span class="english">Urban development</span>
                   <span class="french">Le développement urbain du village</span>
                   </a></li>
+-->
                   <li><a href="landUse.html">
                   <span class="czech">Vývoj využití ploch</span>
                   <span class="english">Land Use</span>
@@ -92,6 +99,17 @@
               <span class="english">Contact</span>
               <span class="french">Le contact</span>
               </a></li>
+              <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                <span class="czech">Jazyk</span>
+                <span class="english">Language</span>
+                <span class="french">Langue</span> <b class="caret"></b></a>
+                <ul class="dropdown-menu">
+                  <li><a href="javascript:chooseStyle('none', 60)">Česky</a></li>
+                  <li><a href="javascript:chooseStyle('english', 60)">English</a></li>
+<!--                 <li><a href="javascript:chooseStyle('french', 60)">Fran&ccedil;ais</a></li>-->
+                </ul>
+              </li>
             </ul>
           </div>
         </div>
@@ -99,23 +117,6 @@
     </nav>
 
     <div class="wrapper">
-      <div class="container">
-        <div id="switchform">
-          <ul>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-              <span class="czech">Jazyk</span>
-              <span class="english">Language</span>
-              <span class="french">Langue</span> <b class="caret"></b></a>
-                <ul class="dropdown-menu">
-                 <li><a href="javascript:chooseStyle('none', 60)">Česky</a></li>
-                 <li><a href="javascript:chooseStyle('english', 60)">English</a></li>
-<!--                 <li><a href="javascript:chooseStyle('french', 60)">Fran&ccedil;ais</a></li>-->
-               </ul>
-             </li>
-           </ul>
-         </div>
-       </div>
       <div class="container">
         <h2><span class="czech">O Projektu</span>
         <span class="english">About</span>
@@ -137,7 +138,7 @@
         <span class="english"></span>
         <span class="french"></span></p>
         
-        <p><span class="czech">Při jakémkoliv dotazu, připomínce nebo námětu mě neváhejte kontaktovat. Můžete k tomu použít buď následující formulář nebo pomocí profilů na sociálních sítích.</span>
+        <p><span class="czech">Při jakémkoliv dotazu, připomínce nebo námětu mě neváhejte kontaktovat. Můžete k tomu použít buď formulář na záložce <i>Kontakt</i> nebo pomocí profilů na sociálních sítích &#40;na téže záložce&#41;.</span>
         <span class="english"></span>
         <span class="french"></span></p>
         
@@ -153,16 +154,7 @@
       <div class="container paticka">
         <span class="czech">&copy; Ing. Renata Duchnová s použitím knihovny <a href="http://getbootstrap.com"><i>Bootstrap</i></a></span>
         <span class="english">&copy; Ing. Renata Duchnová with contributions of <a href="http://getbootstrap.com"><i>Bootstrap</i></a> library</span>
-<!--
-        <li class="dropdown">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="czech">Jazyk</span><span class="english">Language</span><span class="french">Langue</span> <b class="caret"></b></a>
-                    <ul class="dropdown-menu">
-                      <li><a href="javascript:chooseStyle('none', 60)">Česky</a></li>
-                      <li><a href="javascript:chooseStyle('english', 60)">English</a></li>
-                      <li><a href="javascript:chooseStyle('french', 60)">Fran&ccedil;ais</a></li>
-                    </ul>
-                </li>
--->
+
       </div>
     </footer>
 
