--- a/history.html
+++ b/history.html
@@ -37,6 +37,12 @@
                 <span class="english">Town</span>
                 <span class="french">Le village</span> <b class="caret"></b></a>
                 <ul class="dropdown-menu">
+                  <li><a href="loc_his.html">
+                  <span class="czech">O Obci</span>
+                  <span class="english">The town</span>
+                  <span class="french">Le village</span>
+                  </a></li>
+<!--
                   <li><a href="location.html">
                   <span class="czech">Poloha</span>
                   <span class="english">Location</span>
@@ -52,6 +58,7 @@
                   <span class="english">Urban development</span>
                   <span class="french">Le développement urbain du village</span>
                   </a></li>
+-->
                   <li><a href="landUse.html">
                   <span class="czech">Vývoj využití ploch</span>
                   <span class="english">Land Use</span>
@@ -92,6 +99,17 @@
               <span class="english">Contact</span>
               <span class="french">Le contact</span>
               </a></li>
+              <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                <span class="czech">Jazyk</span>
+                <span class="english">Language</span>
+                <span class="french">Langue</span> <b class="caret"></b></a>
+                <ul class="dropdown-menu">
+                  <li><a href="javascript:chooseStyle('none', 60)">Česky</a></li>
+                  <li><a href="javascript:chooseStyle('english', 60)">English</a></li>
+<!--                 <li><a href="javascript:chooseStyle('french', 60)">Fran&ccedil;ais</a></li>-->
+                </ul>
+              </li>
             </ul>
           </div>
         </div>
@@ -99,23 +117,6 @@
     </nav>
 
     <div class="wrapper">
-      <div class="container">
-        <div id="switchform">
-          <ul>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-              <span class="czech">Jazyk</span>
-              <span class="english">Language</span>
-              <span class="french">Langue</span> <b class="caret"></b></a>
-                <ul class="dropdown-menu">
-                 <li><a href="javascript:chooseStyle('none', 60)">Česky</a></li>
-                 <li><a href="javascript:chooseStyle('english', 60)">English</a></li>
-<!--                 <li><a href="javascript:chooseStyle('french', 60)">Fran&ccedil;ais</a></li>-->
-               </ul>
-             </li>
-           </ul>
-         </div>
-       </div>
       <div class="container">
         <h2><span class="czech">Historie obce</span>
         <span class="english">History of the town</span>
