alteration the pages

--- a/index.html
+++ b/index.html
@@ -89,11 +89,13 @@
                   </a></li>
                 </ul>
               </li>
+<!--
               <li><a href="about.html">
               <span class="czech">O Projektu</span>
               <span class="english">About</span>
               <span class="french">A propos du projet</span>
               </a></li>
+-->
               <li><a href="contakt.html">
               <span class="czech">Kontakt</span>
               <span class="english">Contact</span>
@@ -170,6 +172,10 @@
 
         <p><span class="czech">Rekonstrukce obce spočívá v&nbsp;modelaci jednotlivých domů a terénu pod obcí. Tyto modely jsou pak doplněny informacemi o původní budově, pokud jsou takové informace známy. Zároveň vzniká model středu obce z&nbsp;roku 1972. Povídání o&nbsp;modelech a jednotlivé modely budov jsou k&nbsp;dispozici v&nbsp;záložce <i>Rekonstrukce obce</i>. Stránky jsou doplněny povídáním o&nbsp;poloze a historii obce - záložka <i>O Obci</i>. V záložce <i>O projektu</i> se nachází pár slov o těchto stránkách. Formulář pro zasílání námětů a poznámek naleznete v záložce <i>Kontakt</i>.</span>
         <span class="english">Reconstruction of the town lies in the modeling of buildings and terrain of the town. These models are then supplemented with information on the original building, where such information is known. At the same time there is a model of the town center from 1972. Description of the models and the models of buildings are available in the tab <i>Reconstruction of the town</i>. Pages are also extended description of the location and history of town - the tab <i>Town</i>. Information about this pages and project is in the tab <i>About</i>. Form for sending topics and notes is in the tab <i>Contact</i>.</span>
+        <span class="french"></span></p>
+
+        <p><span class="czech">Anglická verze je stále ve fázi vývoje. Z tohoto důvodu byly některé textové části zkráceny nebo vynechány. Po jejich překladu budou opět dostupné v plné verzi.</span>
+        <span class="english">The English version is still under development. For this reason some of the paragraphs were shortened or omitted. They will be fully available when translated.</span>
         <span class="french"></span></p>
 
         <div class="bg-warning aktual">
