--- a/model_town.html
+++ b/model_town.html
@@ -90,11 +90,13 @@
                   </a></li>
                 </ul>
               </li>
+<!--
               <li><a href="about.html">
               <span class="czech">O Projektu</span>
               <span class="english">About</span>
               <span class="french">A propos du projet</span>
               </a></li>
+-->
               <li><a href="contakt.html">
               <span class="czech">Kontakt</span>
               <span class="english">Contact</span>
@@ -200,8 +202,8 @@
         <span class="english">The model of the town will be displayed after cliking <a class="various" data-fancybox-type="iframe" href="sight/town.html">here.</a></span>
         <span class="french"></span></p>
         
-        <p><span class="czech">Stažení modelu obce <a href="download/model_obce.zip">zde.</a></span>
-        <span class="english">Download the model of the town <a href="download/model_obce.zip">here.</a></span>
+        <p><span class="czech">Stažení modelu obce <a href="download/town.zip">zde.</a></span>
+        <span class="english">Download the model of the town <a href="download/town.zip">here.</a></span>
         <span class="french"></span></p>
         
         <p><span class="czech"></span>
